# AiRanDesk

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README_RK3288_UBUNTU18.04.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  release.yml
conf/: config.ini
src/: control_window.cpp  control_window.h  file_transfer_window.cpp  file_transfer_window.h  main.cpp  main_window.cpp  main_window.h  main_window.ui
src/common/: constant.h  logger_manager.h
src/media/: h264_decoder.cpp  h264_decoder.h  h264_encoder.cpp  h264_encoder.h  media_capture.cpp  media_capture.h  media_player.cpp  media_player.h
src/util/: config_util.cpp  config_util.h  convert.cpp  convert.h  file_packet_util.cpp  file_packet_util.h  input_util.cpp  json_util.cpp  json_util.h
src/webrtc/: webrtc_cli.cpp  webrtc_cli.h  webrtc_ctl.cpp  webrtc_ctl.h
src/websocket/: ws_cli.cpp  ws_cli.h
